--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -371,6 +371,7 @@ a:focus {
     overflow: hidden;
     box-shadow: 5px 5px 5px -5px rgba(0,0,0,.2);
     border: solid #fff 10px;
+    height: 340px;
 }
 
 .product_section .box .img-box {
